# copernica

./: .gitignore  .gitmodules  Cargo.toml  README.md  client.sh  copernica.json  network.sh  run.sh  server.sh  shell.nix  verifpal.vp
ccli/: Cargo.toml
ccli/src/: config.rs  main.rs
client/: Cargo.toml
client-libs/: Cargo.toml
client-libs/src/: file_packing.rs  file_sharing.rs  lib.rs  relay_node.rs  requestor.rs
client/src/: lib.rs  main.rs
content-store/: Cargo.toml
content-store/src/: fs.rs  in_memory.rs  lib.rs
copernica/: Cargo.toml  README.md
copernica-apps/: Cargo.toml
copernica-apps/src/: ccli.rs  copernica.rs  takeaway.rs
copernica-broker/: Cargo.toml
copernica-broker/src/: bayes.rs  bloom_filter.rs  broker.rs  lib.rs  router.rs
copernica-clients/: Cargo.toml
copernica-clients/src/: copernica.rs  ftpcp.rs
copernica-clients/src/ccli/: Cargo.toml
copernica-common/: Cargo.toml  README.md
copernica-common/src/: common.rs  constants.rs  data.rs  hbfi.rs  hbfi_exclude_frame.rs  identity.rs  inter_link_packet.rs  lib.rs  link.rs  link_id.rs  link_packet.rs  logger.rs  narrow_waist_packet.rs  narrow_waist_packet_request_equals_response.rs  nonce.rs  operations.rs  packets.rs  parser.rs  reply_to.rs  response_data.rs  serialization.rs  tag.rs  verifpal.vp
copernica-core/: Cargo.toml
copernica-core/src/: bayes.rs  bloom_filter.rs  copernica.rs  hbfi.rs  lib.rs  link.rs  packets.rs  router.rs
copernica-identity/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
copernica-identity/src/: identity.rs  interface.rs  lib.rs  memsec.rs  passport.rs  seed.rs  shielded.rs  time.rs
copernica-identity/src/key/: ed25519.rs  ed25519_extended.rs  ed25519_hd.rs  mod.rs  shared_secret.rs
copernica-lib/: Cargo.toml
copernica-lib/src/: constants.rs  identity.rs  lib.rs  packets.rs  web_of_trust.rs
copernica-lib/src/client/: mod.rs  requestor.rs
copernica-lib/src/crypto/: key.rs
copernica-lib/src/node/: content_store.rs  faces.rs  mod.rs  router.rs  sparse_distributed_representation.rs
copernica-libs/: Cargo.toml
copernica-libs/src/: constants.rs  file_packing.rs  file_sharing.rs  identity.rs  lib.rs  relay_node.rs  requestor.rs
copernica-links/: Cargo.toml  README.md
copernica-links/src/: lib.rs  mpsc_channel.rs  mpsc_corruptor.rs  transport.rs  udp.rs  udpipv4.rs
copernica-logger/: Cargo.toml
copernica-logger/src/: lib.rs
copernica-monitor/: Cargo.toml
copernica-monitor/src/: dot.rs  graphviz.rs  lib.rs  main.rs
copernica-packets/: Cargo.toml  README.md
copernica-packets/src/: data.rs  hbfi.rs  hbfi_only_keys.rs  identity.rs  lib.rs  link_packet.rs  narrow_waist_packet.rs  nonce.rs  reply_to.rs  response_data.rs  tag.rs
copernica-protocols/: Cargo.toml  README.md
copernica-protocols/src/: echo.rs  file_packing.rs  ftp.rs  lib.rs  protocol.rs  txrx.rs
copernica-sentinel/: Cargo.toml  memory.x
copernica-sentinel/.cargo/: config
copernica-sentinel/src/: main.rs
copernica-services/: Cargo.toml
copernica-services/src/: echo.rs  file_packing.rs  file_sharing.rs  ftp.rs  lib.rs  relay_node.rs  service.rs
copernica-tests/: Cargo.toml
copernica-tests/src/: common.rs  crypto.rs  ftp.rs  lib.rs  main.rs  netsim.rs  network.rs  networks.rs  primitive_link_packet.rs  protocols.rs  reliable_ordered.rs  reliable_ordered_cleartext.rs  reliable_ordered_cyphertext.rs  reliable_sequenced.rs  reliable_sequenced_cleartext.rs  reliable_sequenced_cyphertext.rs  router.rs  sharing.rs  test_parse.rs  tryme.rs  unreliable_sequenced.rs  unreliable_sequenced_cleartext.rs  unreliable_sequenced_cyphertext.rs
copernica/src/: bloom_filter.rs  channel.rs  client.rs  constants.rs  copernica.rs  copernica_constants.rs  hbfi.rs  identity.rs  lib.rs  link.rs  main.rs  narrow_waist.rs  network.rs  packer.rs  packets.rs  response_store.rs  router.rs  sdri.rs  serdeser.rs  web_of_trust.rs
copernica/src/client/: file_sharing.rs  mod.rs  requestor.rs
copernica/src/node/: faces.rs  router.rs  sparse_distributed_representation.rs
copernica/src/transport/: mod.rs  packet.rs  udp.rs
copernicafs/: Cargo.toml  README.md
copernicafs/src/: cli.yml  lib.rs  main.rs
copernicafs/src/copernicafs/: config.rs  copernica_facade.rs  file.rs  file_manager.rs  filesystem.rs  mod.rs
copernican/: Cargo.toml
copernican/src/: main.rs
devtools/: Cargo.toml
devtools/src/: main.rs
faces/: Cargo.toml
faces/src/: faces.rs  lib.rs  mock.rs  sparse_distributed_representation.rs  sparse_distributed_routing.rs  tcp.rs  udp.rs  uds.rs
faces/src/sys/: bpf.rs  linux.rs  macos.rs  mod.rs
libcopernica/: Cargo.toml
libcopernica/src/: constants.rs  identity.rs  lib.rs  narrow_waist.rs  packets.rs  response_store.rs  sdri.rs  serder.rs  serdeser.rs  web_of_trust.rs
libcopernica/src/client/: requestor.rs
libcopernica/src/node/: content_store.rs  faces.rs  mod.rs  router.rs  sparse_distributed_representation.rs
libcopernica/src/transport/: mod.rs  packet.rs  udp.rs
logger/: Cargo.toml
logger/src/: lib.rs
network-integration-tests/: Cargo.toml
network-integration-tests/src/: main.rs
network-regressions/: Cargo.toml
network-regressions/src/: common.rs  copernicafs.rs  lib.rs  main.rs  router.rs  sharing.rs  tryme.rs
network-simulator/: Cargo.toml
network-simulator/src/: main.rs
packets/: Cargo.toml
packets/src/: data.rs  index.rs  interest.rs  lib.rs  packets.rs
router/: Cargo.toml
router/src/: content_store.rs  forwarding_information_base.rs  lib.rs  pending_interest_table.rs  router.rs
router/tests/: integration-tests.rs
src/: lib.rs  shielded.rs
src/key/: ed25519.rs  ed25519_extended.rs  ed25519_hd.rs  mod.rs  shared_secret.rs
takeaway/: Cargo.toml
takeaway/src/: main.rs  pipe.rs
thin-waist/: Cargo.toml
thin-waist/src/: lib.rs
transport/: Cargo.toml
transport/src/: lib.rs  mpsc_channel.rs  mpsc_corruptor.rs  transport.rs  udp.rs
