[package]
name = "ccli"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

[[bin]]
name = "ccli"
path = "src/main.rs"

[dependencies]
packets = { path = "../packets" }
copernica-lib = { path = "../copernica-lib" }
crossbeam = "0.7.3"
structopt = "0.3.4"
crossbeam-channel = "0.3"
bincode = "1"
log = "0.4"
env_logger = "0.7.1"
laminar = "0.3.2"
im = "13.0.0"
rpassword = "4"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
