[package]
name = "ccli"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

[[bin]]
name = "ccli"
path = "src/main.rs"

[dependencies]
copernica = { path = "../copernica" }
copernicafs = { path = "../copernicafs" }
crossbeam = "0.7.3"
structopt = "0.3.4"
crossbeam-channel = "0.3"
borsh = "0.7.0"
log = "0.4"
rpassword = "4"
async-std = "1.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
anyhow = "1.0"
sled = "0.32.0"
