[package]
name = "client"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packets = { path = "../packets" }
futures-preview = "0.3.0-alpha.19"
crossbeam-channel = "0.3.9"
async-std = "0.99"
bincode = "1"
log = "0.4"
env_logger = "0.7.1"
