[package]
name = "client"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packets = { path = "../packets" }
crossbeam = "0.7.3"
crossbeam-channel = "0.3"
bincode = "1"
log = "0.4"
env_logger = "0.7.1"
laminar = "0.3.2"
im = "13.0.0"
