[package]
name = "copernica-broker"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

[lib]
name = "copernica_broker"
path = "src/lib.rs"

[dependencies]
copernica-common = { path = "../copernica-common" }
log = "0.4"
futures = "0.3.15"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
sled = "0.32.0"
rand = "0.8.3"
rand_core = "0.6.1"
async-executor = "1.4.1"
futures-lite = "1.11.3"
uluru = "2.0.0"
