[package]
name = "copernica-broker"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

[lib]
name = "copernica_broker"
path = "src/lib.rs"

[dependencies]
copernica-common = { path = "../copernica-common" }
log = "0.4"
anyhow = "1.0"
uluru = "2.0.0"
crossbeam-channel = "0.5.1"
