[package]
name = "copernica-clients"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "copernica"
path = "src/copernica.rs"

[[bin]]
name = "ccli"
path = "src/ccli.rs"

[[bin]]
name = "ftpcp"
path = "src/ftpcp.rs"

[dependencies]
copernica-common = { path = "../copernica-common" }
copernica-broker = { path = "../copernica-broker" }
copernica-protocols = { path = "../copernica-protocols" }
copernica-links = { path = "../copernica-links" }
anyhow = "1.0"
rand = "0.8.3"
clap = { version = "2.33.0", features = ["yaml"] }
ctrlc = "3.1.4"
log = "0.4"
