[package]
name = "copernica-clients"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[[bin]]
#name = "copernica"
#path = "src/copernica.rs"

[[bin]]
name = "ccli"
path = "src/ccli/main.rs"

[features]
default = []
ftdi = ["probe-rs/ftdi"]
sentry = ["probe-rs-cli-util/sentry"]

[dependencies]
structopt = "0.3.20"
indicatif = "0.15.0"
env_logger = "0.8.1"
log = "0.4.14"
lazy_static = "1.4.0"
colored = "2.0.0"
probe-rs = { version = "0.10.0", git = "https://github.com/probe-rs/probe-rs" }
probe-rs-cli-util = { version = "0.10.0", git = "https://github.com/probe-rs/probe-rs", default-features = false, features=["anyhow"] }
git-version = "0.3.4"
anyhow = "1.0.34"
bytesize = "1.0.1"
thiserror = "1.0.23"
dunce = "1.0.1"
