[package]
name = "copernica-common"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

[dependencies]
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.3.0"
fern = "0.5.9"
chrono = "0.4.9"
log = "0.4"
rand = "0.8.3"
rand_core = "0.6.1"
anyhow = "1.0"
cryptoxide = "0.3.2"
keynesis = "1.4.0"
thiserror = "1.0.20"
bech32 = "0.7.2"
hex = "0.4.2"
macaddr = { version = "1.0.1", features = ["serde"] }
itertools = "0.10.1"
