[package]
name = "copernica-common"
description = "Common types and functions used between all copernica crates"
documentation = "https://docs.rs/copernica"
homepage = "https://fractalide.com/copernica/"
repository = "https://github.com/fractalide/copernica"
readme = "README.md"
edition = "2018"
license = "MPL-2.0"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]

[dependencies]
fern = "0.5.9"
log = "0.4"
crossbeam-channel = "0.5.1"
chrono = "0.4.9"
