[package]
name = "copernica-common"
description = "Common types and functions used between all copernica crates"
documentation = "https://docs.rs/copernica"
homepage = "https://fractalide.com/copernica/"
repository = "https://github.com/fractalide/copernica"
readme = "README.md"
edition = "2018"
license = "MPL-2.0"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]

[dependencies]
log = { version = "0.4", default-features = false }
crossbeam-channel = "0.5.1"
arrayvec = "0.7.1"
