[package]
name = "copernica-lib"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

[dependencies]
rand = "0.7.2"
bitvec = "0.15.2"
bincode = "1"
packets = { path = "../packets" }
async-task = "1.0.0"
log = "0.4"
env_logger = "0.7.1"
laminar = "0.3.2"

logger = { path = "../logger" }
lru = "0.4.0"
crossbeam = "0.7"
crossbeam-channel = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

im = "13.0.0"
