[package]
name = "copernica-links"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
copernica-packets = { path = "../copernica-packets" }
copernica-common= { path = "../copernica-common" }
async-io = "1.4.1"
futures-lite = "1.11.3"
anyhow = "1.0"
reed-solomon = "0.2"
log = "0.4"
crossbeam-channel = "0.5.1"
