[package]
name = "copernica-links"
description = "Transports used to link copernica brokers to other brokers and or protocols"
documentation = "https://docs.rs/copernica"
homepage = "https://fractalide.com/copernica/"
repository = "https://github.com/fractalide/copernica"
readme = "README.md"
license = "MPL-2.0"
edition = "2018"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]

[dependencies]
copernica-packets = { version = "0.1.0", path = "../copernica-packets" }
copernica-common= { version = "0.1.0", path = "../copernica-common" }
async-io = "1.4.1"
futures-lite = "1.11.3"
anyhow = "1.0"
reed-solomon = "0.2"
log = "0.4"
crossbeam-channel = "0.5.1"
