[package]
name = "copernica-monitor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
copernica-common = { path = "../copernica-common" }
beard = "0.2.1"
anyhow = "1.0"
rand = "0.8.4"
thiserror = "1.0.25"
