[package]
name = "copernica-monitor"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "copernica-monitor"
path = "src/main.rs"

[lib]
name = "copernica_monitor"
path = "src/lib.rs"

[dependencies]
copernica-common = { path = "../copernica-common" }
beard = "0.2.1"
anyhow = "1.0"
rand = "0.8.4"
thiserror = "1.0.25"
console_engine = "2.0.1"
term_size = "0.3.2"
futures = "0.3.15"
itertools = "0.10.1"
