[package]
name = "copernica-packets"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

[dependencies]
copernica-common = { path = "../copernica-common" }
bincode = "1.3"
log = "0.4"
rand = "0.8.3"
rand_core = "0.6.1"
anyhow = "1.0"
cryptoxide = "0.3.2"
keynesis = "1.4.0"
thiserror = "1.0.20"
bech32 = "0.7.2"
hex = "0.4.2"
crossbeam-channel = "0.5.1"
