[package]
name = "copernica-packets"
description = "Types and functions used between all copernica crates"
documentation = "https://docs.rs/copernica"
homepage = "https://fractalide.com/copernica/"
repository = "https://github.com/fractalide/copernica"
readme = "README.md"
edition = "2018"
license = "MPL-2.0"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]

[dependencies]
copernica-common = { version = "0.1.0", path = "../copernica-common" }
bincode = "1.3"
log = "0.4"
rand = "0.8.3"
rand_core = "0.6.1"
anyhow = "1.0"
cryptoxide = "0.3.2"
keynesis = "1.4.0"
thiserror = "1.0.20"
bech32 = "0.7.2"
hex = "0.4.2"
crossbeam-channel = "0.5.1"
