[package]
name = "copernica-protocols"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

[dependencies]
copernica-common= { path = "../copernica-common" }
copernica-links = { path = "../copernica-links" }
log = "0.4"
bincode = "1.3"
anyhow = "1.0"
sled = "0.32.0"
serde = { version = "1.0", features = ["derive"] }
futures-channel = "0.3.15"
walkdir = "2.3.1"
futures = "0.3.12"
async-executor = "1.4.1"
futures-lite = "1.11.3"
crossbeam-utils = "0.8.4"
async-trait = "0.1.50"
