[package]
name = "copernica-protocols"
description = "Protocols are essentially the \"endpoints\" in a copernica network."
documentation = "https://docs.rs/copernica"
homepage = "https://fractalide.com/copernica/"
repository = "https://github.com/fractalide/copernica"
readme = "README.md"
edition = "2018"
license = "MPL-2.0"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]

[dependencies]
copernica-packets = { version = "0.1.0",  path = "../copernica-packets" }
copernica-common= { version = "0.1.0", path = "../copernica-common" }
log = "0.4"
bincode = "1.3"
anyhow = "1.0"
crossbeam-channel = "0.5.1"
arrayvec = "0.7.1"
