[package]
name = "copernica-services"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

[dependencies]
copernica-common= { path = "../copernica-common" }
copernica-links = { path = "../copernica-links" }
copernica-protocols = { path = "../copernica-protocols" }
log = "0.4"
anyhow = "1.0"
sled = "0.32.0"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.3"
walkdir = "2.3.1"
copernica-identity = { path = "../copernica-identity" }

