[package]
name = "copernica-services"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

[dependencies]
copernica-common= { path = "../copernica-common" }
copernica-links = { path = "../copernica-links" }
copernica-protocols = { path = "../copernica-protocols" }
log = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.3.1"

