[package]
name = "copernica-tests"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"


[[bin]]
name = "copernica-tests"
path = "src/main.rs"

[[bin]]
name = "tryme"
path = "src/tryme.rs"

[profile.dev]
debug = 2

[dependencies]
copernica-broker = { path = "../copernica-broker" }
copernica-clients = { path = "../copernica-clients" }
copernica-protocols = { path = "../copernica-protocols" }
copernica-services = { path = "../copernica-services" }
copernica-links = { path = "../copernica-links" }
copernica-common = { path = "../copernica-common" }
copernica-identity = { path = "../copernica-identity" }
crossbeam = "0.7"
crossbeam-channel = "0.3"
log = "0.4"
dirs = "2.0.2"
serde = { version = "1.0", features = ["derive"] }
rand = "0.7.2"
async-std = "1.4.0"
anyhow = "1.0"
sled = "0.32.0"
reed-solomon = "0.2"
rand_chacha = "0.2.2"
rand_core = "0.5.1"
