[package]
name = "copernica-tests"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

[[bin]]
name = "copernica-tests"
path = "src/main.rs"

[[bin]]
name = "tryme"
path = "src/tryme.rs"

[profile.dev]
debug = 2

[dependencies]
copernica-broker = { path = "../copernica-broker" }
copernica-protocols = { path = "../copernica-protocols" }
copernica-links = { path = "../copernica-links" }
copernica-packets = { path = "../copernica-packets" }
copernica-common = { path = "../copernica-common" }
log = "0.4"
rand = "0.8.3"
anyhow = "1.0"
scaffolding = { git = "https://github.com/primetype/scaffolding", features = ["with-quickcheck"] }
crossbeam-channel = "0.5.1"
