[package]
name = "copernica"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

[[bin]]
name = "copernica"
path = "src/copernica.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]

bincode = "1"
futures-preview = "0.3.0-alpha.19"
router = { path = "../router" }
faces = { path = "../faces" }
content-store = { path = "../content-store" }
client = { path = "../client" }
log = "0.4"
clap = "2.33.0"
fern = "0.5.9"
chrono = "0.4.9"

#client.rs
packets = { path = "../packets" }
async-std = "0.99"

