[package]
name = "copernica"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

[dependencies]

bincode = "1"
copernica-lib = { path = "../copernica-lib" }
logger = { path = "../logger" }
log = "0.4"
clap = "2.33.0"
fern = "0.5.9"
chrono = "0.4.9"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

#client.rs
env_logger = "0.7.1"
