[package]
name = "copernicafs"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "copernicafs"
path = "src/lib.rs"

[[bin]]
name = "copernicafs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4.9"
clap = { version = "2.33.0", features = ["yaml"] }
config = "0.10.1"
ctrlc = "3.1.4"
fuse = "0.3"
id_tree = "1.7"
libc = "0.2"
log = "0.4"
pretty_env_logger = "0.4.0"
time = "0.1.42"
xdg = "2.2.0"
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0.51"
itertools = "0.9.0"

copernica = { path = "../copernica" }
logger = { path = "../logger" }

