[package]
name = "faces"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

[dependencies]
rand = "0.7.2"
bitvec = "0.15.2"
bincode = "1"
serde = "1.0.63"
serde_derive = "1.0.27"
bytes = "0.4.12"
async-std = "0.99"
packets = { path = "../packets" }
crossbeam-channel = "0.3.9"
async-task = "1.0.0"
futures-preview = "0.3.0-alpha.17"
