[package]
name = "faces"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

[dependencies]
rand = "0.7.2"
bitvec = "0.15.2"
bincode = "1"
async-std = "0.99"
packets = { path = "../packets" }
crossbeam-channel = "0.3.9"
async-task = "1.0.0"
futures-preview = "0.3.0-alpha.19"
log = "0.4"
env_logger = "0.7.1"

[dev-dependencies]
env_logger = "0.7.1"
