[package]
name = "libcopernica"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

[dependencies]
rand = "0.7.2"
bitvec = "^0.17"
bincode = "1"
logger = { path = "../logger" }
async-task = "1.0.0"
log = "0.4"
env_logger = "0.7.1"
laminar = "0.3.2"
lru = "0.4.5"
crossbeam = "0.7"
crossbeam-channel = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
im = "13.0.0"
chain-crypto = { path = "../chain-libs/chain-crypto" }
chain-addr = { path = "../chain-libs/chain-addr" }
getrandom = "0.1.13"
rand_chacha = "0.1"
rand_core = "0.3"
cryptoxide = "0.1.2"
base64 = "0.11.0"
dirs = "2.0.2"
sha3 = "0.8.2"
async-std = "1.4.0"
