[package]
name = "network-integration-tests"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

[dependencies]
packets = { path = "../packets" }
router = { path = "../router" }
faces = { path = "../faces" }
content-store = { path = "../content-store" }
bincode = "1"
async-std = "0.99.9"
