[package]
name = "network-regressions"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"


[[bin]]
name = "network-regressions"
path = "src/main.rs"

[dependencies]
libcopernica = { path = "../libcopernica" }
logger = { path = "../logger" }
crossbeam = "0.7"
crossbeam-channel = "0.3"
log = "0.4"
dirs = "2.0.2"
bincode = "1"
rand = "0.7.2"

[profile.dev]
debug = 2
