[package]
name = "network-regressions"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"


[[bin]]
name = "network-regressions"
path = "src/main.rs"

[[bin]]
name = "tryme"
path = "src/tryme.rs"

[profile.dev]
debug = 2

[dependencies]
copernica = { path = "../copernica" }
copernicafs = { path = "../copernicafs" }
copernica-apps = { path = "../copernica-apps" }
client-libs = { path = "../client-libs" }
transport = { path = "../transport" }
logger = { path = "../logger" }
crossbeam = "0.7"
crossbeam-channel = "0.3"
log = "0.4"
dirs = "2.0.2"
borsh = "0.7.0"
rand = "0.7.2"
async-std = "1.4.0"
anyhow = "1.0"
sled = "0.32.0"


futures = "0.3.5"
tokio = { version = "0.2.22", features = ["macros", "rt-core", "rt-threaded"] }
reed-solomon = "0.2"
rustc-serialize = "0.3"
