[package]
name = "network-simulator"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
router = { path = "../router" }
faces = { path = "../faces" }
content-store = { path = "../content-store" }
packets = { path = "../packets" }
client = { path = "../client" }
futures-preview = "0.3.0-alpha.19"
fern = "0.5.9"
chrono = "0.4.9"
log = "0.4"
crossbeam-channel = "0.3.9"
