[package]
name = "network-simulator"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
router = { path = "../router" }
faces = { path = "../faces" }
content-store = { path = "../content-store" }
logger = { path = "../logger" }
packets = { path = "../packets" }
client = { path = "../client" }
crossbeam = "0.7"
crossbeam-channel = "0.3"
log = "0.4"
