[package]
name = "router"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

[dependencies]
packets = { path = "../packets" }
faces = { path = "../faces" }
content-store = { path = "../content-store" }
lru-cache = "0.1.2"
crossbeam-channel = "0.3.9"
async-task = "1.0.0"
async-std = "0.99"
futures-preview = "0.3.0-alpha.19"
futures-util-preview = "0.3.0-alpha.19"
