[package]
name = "router"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

[dependencies]
packets = { path = "../packets" }
faces = { path = "../faces" }
content-store = { path = "../content-store" }
lru-cache = "0.1.2"
crossbeam = "0.7.2"
async-task = "1.0.0"
async-std = "0.99"
futures-preview = "0.3.0-alpha.19"
futures-util-preview = "0.3.0-alpha.19"
log = "0.4"
env_logger = "0.7.1"

[dev-dependencies]
env_logger = "0.7.1"
