[package]
name = "router"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

[dependencies]
packets = { path = "../packets" }
faces = { path = "../faces" }
content-store = { path = "../content-store" }
logger = { path = "../logger" }
lru-cache = "0.1.2"
crossbeam = "0.7"
crossbeam-channel = "0.3"
log = "0.4"
env_logger = "0.7.1"
rand = "0.7.2"
im-rc = "13.0.0"
bincode = "1"
laminar = "0.3.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
env_logger = "0.7.1"
bincode = "1"
