[package]
name = "takeaway"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

libcopernica = { path = "../libcopernica" }
logger = { path = "../logger" }
log = "0.4"
clap = "2.33.0"
fern = "0.5.9"
chrono = "0.4.9"
fuse = "0.3"
nix = "0.17"
tempdir = "0.3"
dirs = "3.0.0"
anyhow = "1.0"
crossbeam-channel = "0.3"
async-std = "1.4.0"
