[package]
name = "transport"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
copernica = { path = "../copernica" }
async-std = "1.4.0"
crossbeam-channel = "0.3"
anyhow = "1.0"
borsh = "0.7.0"
reed-solomon = "0.2"
